#!/bin/sh

AC_PREREQ(2.54)
AC_INIT
AC_CONFIG_SRCDIR([Makefile.in])

# Required programs
# ===========================================================================
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CPP

AC_CONFIG_FILES([Makefile
                 Makefile.rules
                 emu/Makefile
                 emu/rrgb/Makefile
                 emu/rrz80/Makefile
                 emu/rrz80/cpu/Makefile
])

AC_OUTPUT
