#
# configure.in - input script to autoconf to
#                configure directory
#
# This file is part of the GNU PIC Library.
#
# Originally written by
# 	Vangelis Rokas <vrokas@otenet.gr>
#
# Adopted for the SDCC/pic14 library by
#	Raphael Neider <rneider AT web.de>
#
# $Id$
#

# Process this file with autoconf to produce a configure script.
AC_PREREQ(2.60)
AC_INIT

AC_DEFUN([AC_CONFIG_SRCDIR])
#AC_DEFUN(AC_CONFIG_FILES)

# Checks for programs.
AC_CHECK_PROG(GPASM,	gpasm,	gpasm, :)
AC_CHECK_PROG(GPLINK,	gplink,	gplink, :)
AC_CHECK_PROG(GPLIB,	gplib,	gplib, :)

AC_CHECK_PROG(RM,	rm,	[rm -f], :)
AC_CHECK_PROG(CP,	cp,	cp, :)
AC_CHECK_PROG(MV,	mv,	mv, :)
AC_CHECK_PROG(LS,	ls,	ls, :)
AC_CHECK_PROG(SED,	sed,	sed, :)
AC_PROG_EGREP
AC_CHECK_PROG(MKDIR,	mkdir,	[mkdir -p], :)
AC_CHECK_PROG(RMDIR,	rmdir,	rmdir, :)

case ":$GPASM:$GPLINK:$GPLIB" in
    *:::*)
        AC_MSG_ERROR([gputils (gpasm, gplink, and gplib) are required but not found.
Either install gputils or reconfigure with --disable-pic14-port and --disable-pic16-port.])
        ;;
esac;

AC_PROG_MAKE_SET

NEWPICS=no;
AC_ARG_ENABLE(
    [new-pics],
    AS_HELP_STRING([--enable-new-pics], [Enable use of PIC devices added to gputils after the 0.13.7 release. Requires custom-built gputils obtained from their SVN repository!]),
    [ case "x$enableval" in
      xyes) NEWPICS=yes;
            AC_MSG_NOTICE([Enabling support for PICs from unreleased gputils -- make sure you have up-to-date gputils from SVN.]);;
      xno) NEWPICS=no;;
      *) AC_MSG_ERROR([bad value "${enableval}" for --enable-new-pics]);;
      esac],
    [ NEWPICS=no ]
)

# Substitute HAVE_NEW_PICS with 'yes' to include new PICs.
AC_SUBST(HAVE_NEW_PICS, $NEWPICS)

## More or less the same using Automake:
# AM_CONDITIONAL([HAVE_NEW_PICS], [ test x$NEWPICS = xyes ])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 Makefile.common
                 libdev/Makefile])
AC_OUTPUT
